Fixed demo video alignment

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -109,12 +109,6 @@ a:hover{
     padding: 10px;
 }
 
-#homeVideo{
-    margin-left: auto;
-    margin-right: auto;
-}
-
-
 /*############################################# Styles About page starts here. ######################## */
 /*
  * Styles the about page.
